# storyboard-obsolete

./: Cargo.toml  readme.md
components/box2d/: Cargo.toml
components/box2d/src/: box.wgsl  lib.rs
components/buffered/: Cargo.toml
components/buffered/src/: lib.rs  renderer.rs
components/primitive/: Cargo.toml
components/primitive/src/: lib.rs  primitive.wgsl
components/text/: Cargo.toml
components/text/src/: cache.rs  font.rs  layout.rs  lib.rs
components/text/src/component/: mod.rs  text.rs  text.wgsl
components/text/src/rasterizer/: mod.rs  outline.rs
components/text/tests/: cache.rs  layout.rs  rasterizer.rs
compositor/box-2d/: Cargo.toml
compositor/box-2d/src/: box.wgsl  compositor.rs  lib.rs
compositor/path/: Cargo.toml
compositor/path/src/: compositor.rs  lib.rs
compositor/primitive/: Cargo.toml
compositor/primitive/src/: compositor.rs  lib.rs  rectangle.rs  triangle.rs
compositor/text/: Cargo.toml
compositor/text/src/: brush.rs  compositor.rs  font.rs  layout.rs  lib.rs  store.rs  text.wgsl
compute-test/: Cargo.toml
compute-test/src/: main.rs
core/: Cargo.toml
core/src/: backend.rs  composite.rs  context.rs  lib.rs  pass.rs  pipeline.rs  renderer.rs  shader.rs  test.rs
core/src/buffer/: index.rs  mod.rs  stream.rs
core/src/component/: extent.rs  mod.rs  texture.rs
core/src/data/: mod.rs  observable.rs
core/src/texture/: depth.rs  mod.rs  resources.rs
crates/core/: Cargo.toml
crates/core/src/: color.rs  lib.rs  math.rs  observable.rs  store.rs  tick_task.rs  time_sampler.rs  unit.rs
crates/frame/: Cargo.toml
crates/frame/src/: lib.rs
crates/layout/: Cargo.toml
crates/layout/src/: extent.rs  lib.rs  transform.rs
crates/render/: Cargo.toml
crates/render/src/: backend.rs  component.rs  lib.rs  shared.rs  task.rs  texture.rs
crates/render/src/buffer/: mod.rs  stream.rs
crates/render/src/cache/: shader.rs
crates/render/src/renderer/: context.rs  mod.rs  pass.rs  surface.rs  texture.rs
crates/render/src/texture/: mod.rs  packed.rs
crates/state/: Cargo.toml
crates/state/src/: lib.rs
crates/state/tests/: test.rs
crates/texture/: Cargo.toml
crates/texture/src/: lib.rs
crates/texture/src/render/: data.rs  mod.rs
example/: Cargo.toml  readme.md
example/src/: logo.rs  main.rs
examples/sample-player/: Cargo.toml  readme.md
examples/sample-player/src/: main.rs  main_menu.rs  player.rs
examples/stars/: Cargo.toml
examples/stars/src/: main.rs
examples/visual-test/: Cargo.toml  readme.md
examples/visual-test/src/: main.rs
graphics/: Cargo.toml
graphics/src/: backend.rs  batch.rs  context.rs  lib.rs  renderer.rs  surface.rs  test.rs  unit.rs
graphics/src/buffer/: mod.rs
graphics/src/component/: color.rs  extent.rs  mod.rs  transform.rs
graphics/src/component/layout/: mod.rs
graphics/src/data/: observable.rs
graphics/src/texture/: framebuffer.rs  resources.rs
layout/flex/: Cargo.toml
layout/flex/src/: lib.rs
storyboard/: Cargo.toml
storyboard-core/: Cargo.toml
storyboard-core/src/: id_gen.rs  lib.rs  observable.rs  state.rs  store.rs  task.rs  tick_task.rs  time_sampler.rs  trait_stack.rs  unit.rs
storyboard-core/src/component/: color.rs  extent.rs  mod.rs
storyboard-core/src/graphics/: backend.rs  component.rs  mod.rs
storyboard-core/src/graphics/buffer/: mod.rs  stream.rs
storyboard-core/src/graphics/renderer/: context.rs  mod.rs  pass.rs  surface.rs
storyboard-core/src/graphics/texture/: mod.rs  packed.rs  view.rs
storyboard-layout/: Cargo.toml
storyboard-layout/src/: lib.rs  node.rs  style.rs  transform.rs
storyboard-sample-renderer/: Cargo.toml
storyboard-sample-renderer/src/: lib.rs  render.rs
storyboard-text/: Cargo.toml
storyboard-text/src/: cache.rs  component.rs  font.rs  layout.rs  lib.rs  mapping.rs  store.rs  text.rs  text.wgsl
storyboard-text/src/component/: mod.rs  text.rs  text.wgsl
storyboard-visual-test/: Cargo.toml
storyboard-visual-test/src/: main.rs
storyboard/src/: app.rs  compositor.rs  id_gen.rs  lib.rs  math.rs  observable.rs  scene.rs  state.rs  store.rs  time_sampler.rs  window.rs
storyboard/src/animation/: mod.rs
storyboard/src/component/: extent.rs  mod.rs  transform.rs
storyboard/src/component/layout/: mod.rs  texture.rs
storyboard/src/graphics/: backend.rs  context.rs  mod.rs  pass.rs  renderer.rs  surface.rs  texture.rs
storyboard/src/graphics/buffer/: index.rs  stream.rs
storyboard/src/graphics/component/: common.rs  mod.rs  texture.rs
storyboard/src/graphics/component/box2d/: box.wgsl  mod.rs
storyboard/src/graphics/component/mask/: mask.wgsl
storyboard/src/graphics/component/path/: path.wgsl
storyboard/src/graphics/component/primitive/: mod.rs  primitive.wgsl
storyboard/src/graphics/component/text/: mod.rs
storyboard/src/graphics/compositor/: mod.rs
storyboard/src/graphics/compositor/box2d/: box.wgsl
storyboard/src/graphics/compositor/mask/: mask.wgsl
storyboard/src/graphics/compositor/primitive/: mod.rs  primitive.wgsl
storyboard/src/graphics/computer/: mod.rs
storyboard/src/graphics/default/: box2d.rs  mod.rs  path.rs  primitive.rs
storyboard/src/graphics/renderer/: mod.rs
storyboard/src/graphics/renderer/box2d/: mod.rs
storyboard/src/graphics/renderer/mask/: mask.wgsl  mod.rs
storyboard/src/graphics/renderer/path/: mod.rs
storyboard/src/graphics/renderer/primitive/: mod.rs  primitive.wgsl
storyboard/src/graphics/texture/: data.rs  depth.rs  mod.rs
storyboard/src/input/: mod.rs
storyboard/src/task/: mod.rs  render.rs
storyboard/src/text/: cache.rs  mod.rs
storyboard/src/thread/: mod.rs  render.rs
visual-sample/: Cargo.toml
visual-sample/src/: main.rs
visual-test/: Cargo.toml
visual-test/src/: main.rs
