[workspace]
resolver = "2"

members = [
    "crates/core",
    "crates/texture",
    "crates/state",
    "crates/layout",
    "crates/render",

    "components/primitive",
    "components/box2d",
    "components/text",
    
    "storyboard",

    "examples/visual-test",
    "examples/sample-player"
]
