[package]
name = "storyboard"
version = "0.1.0"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2018"
license = "MIT"

[dependencies]
wgpu = "0.11.0"
euclid = "0.22.6"
raw-window-handle = "0.3.3"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
palette = { version = "0.6.0", features = [ "bytemuck" ] }
smallbox = { version = "0.8" }

[dev-dependencies]
winit = "0.25.0"
futures = "0.3.17"
rand = "0.8.4"
simple_logger = "1.13.0"
image = "0.23.14"
