[package]
name = "storyboard-example"
version = "0.1.0"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2021"
license = "MIT"

[dependencies]
storyboard-graphics = { path = "../graphics" }
storyboard-path = { path = "../compositor/path" }
storyboard-text = { path = "../compositor/text" }

winit = "0.25.0"
futures = "0.3.17"
rand = "0.8.4"
simple_logger = "1.13.0"
wgpu-profiler = "0.7.0"
image = "0.23.14"
