[package]
name = "storyboard-graphics"
version = "0.1.0"
authors = ["storycraft <storycraft@pancake.sh>"]
edition = "2021"
license = "MIT"

[dependencies]
wgpu = "0.11.0"
euclid = "0.22.6"
raw-window-handle = "0.3.3"
bytemuck = { version = "1.7.2", features = [ "derive" ] }
palette = { version = "0.6.0", features = [ "bytemuck" ] }
smallbox = { version = "0.8" }
rustc-hash = "1.1.0"

[dev-dependencies]
futures = "0.3.17"
