[package]
name = "storyboard-core"
description = "storyboard core"
version = "0.1.0"
edition = "2021"

[dependencies]
wgpu = "0.12.0"
rect_packer = "0.2.1"
bytemuck = "1.9.1"
palette = { version = "0.6.0", features = ["bytemuck"] }
euclid = { version = "0.22.7", features = ["bytemuck"] }
smallvec = "1.8.0"