[package]
name = "storyboard-sample-renderer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storyboard-core = { path = "../storyboard-core" }
palette = { version = "0.6.0", features = ["bytemuck"] }
bytemuck = { version = "1.9.1", features = ["derive"] }
euclid = "0.22.7"
