[package]
name = "storyboard-text"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
storyboard = { path = "../storyboard" }

bytemuck = "1.9.1"
smallvec = "1.8.0"

allsorts = { version = "0.9.0", default-features = false, features = ["flate2_rust"] }
ringbuffer = "0.8.4"
ttf-parser = "0.15.1"
ab_glyph_rasterizer = "0.1.5"

[dev-dependencies]
pollster = "0.2.5"
