[package]
name = "storyboard-visual-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storyboard = { path = "../storyboard" }
storyboard-core = { path = "../storyboard-core" }

tokio = { version = "1", features = ["full"] }
