[package]
name = "storyboard-visual-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storyboard = { path = "../storyboard" }
storyboard-core = { path = "../storyboard-core" }

futures = "0.3.21"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = [
    "Document",
    "OffscreenCanvas",
    "Window"
] }
js-sys = "0.3.57"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
wasm-bindgen-futures = "0.4.30"
