[package]
name = "storyboard"
version = "0.1.0"
edition = "2021"

[dependencies]
storyboard-core = { path = "../storyboard-core" }

winit = "0.26.1"
bytemuck = { version = "1.9.1", features = ["derive"] }
rustc-hash = "1.1.0"
instant = "0.1.12"
triple_buffer = "6.1.0"
crossbeam-channel = "0.5.5"

parking_lot = "0.12.1"
