[package]
name = "storyboard"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
webgl = ["storyboard-render/webgl"]
trace = ["storyboard-render/trace"]
glsl = ["storyboard-render/glsl"]
spirv = ["storyboard-render/spirv"]
angle = ["storyboard-render/angle"]
emscripten = ["storyboard-render/emscripten"]
vulkan-portability = ["storyboard-render/vulkan-portability"]

[dependencies]
storyboard-core = { path = "../crates/core" }
storyboard-texture = { path = "../crates/texture" }
storyboard-render = { path = "../crates/render" }

winit = "0.26.1"
bytemuck = { version = "1.9.1", features = ["derive"] }
rustc-hash = "1.1.0"
instant = "0.1.12"
crossbeam-channel = "0.5.5"
trait-stack = "0.1.1"

parking_lot = "0.12.1"
