[package]
name = "visual-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
storyboard = { path = "../storyboard" }
storyboard-text = { path = "../storyboard-text" }
futures = "0.3.17"
simple_logger = "1.13.0"