[package]
name = "storyboard-text"
description = "Text rendering component"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
storyboard-core = { path = "../../crates/core" }
storyboard-render = { path = "../../crates/render" }
storyboard-texture = { path = "../../crates/texture" }

bytemuck = { version = "1.9.1", features = [ "derive" ] }
smallvec = "1.8.0"
resvg = "0.23.0"
usvg = "0.23.0"
tiny-skia = "0.6.6"

rustybuzz = "0.5.1"
ttf-parser = "0.15.1"
ringbuffer = "0.8.4"
ab_glyph_rasterizer = "0.1.5"

[dev-dependencies]
pollster = "0.2.5"
