[package]
name = "storyboard-core"
description = "storyboard core"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bytemuck = "1.9.1"
palette = { version = "0.6.0", features = ["bytemuck"] }
euclid = { version = "0.22.7", features = ["bytemuck"] }
rustc-hash = "1.1.0"
parking_lot = "0.12.1"
replace_with = "0.1.7"
crossbeam-channel = "0.5"
instant = "0.1.12"
