[package]
name = "storyboard-render"
description = "storyboard core rendering infrastructure"
version = "0.1.0"
edition = "2021"
license = "MIT"

[features]
webgl = ["wgpu/webgl"]
trace = ["wgpu/trace"]
glsl = ["wgpu/glsl"]
spirv = ["wgpu/spirv"]
angle = ["wgpu/angle"]
emscripten = ["wgpu/emscripten"]
vulkan-portability = ["wgpu/vulkan-portability"]

[dependencies]
storyboard-core = { path = "../core" }

wgpu = "0.13.1"
bytemuck = "1.9.1"
rustc-hash = "1.1.0"
parking_lot = "0.12.1"
triple_buffer = "6.1.0"
replace_with = "0.1.7"
crossbeam-channel = "0.5"
trait-stack = "0.1.1"