[package]
name = "sample-player"
version = "0.1.0"
edition = "2021"

[dependencies]
storyboard = { path = "../../storyboard" }
storyboard-text = { path = "../../components/text" }
storyboard-box2d = { path = "../../components/box2d" }
storyboard-state = { path = "../../crates/state" }

futures = "0.3.21"
instant = "0.1.12"

rustfft = "6.0.1"
rodio = { version = "0.15.0", default-features = false, features = ["symphonia-all"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.80"
web-sys = { version = "0.3.57", features = [
    "Document",
    "OffscreenCanvas",
    "Window"
] }
js-sys = "0.3.57"
console_error_panic_hook = "0.1.6"
console_log = "0.1.2"
wasm-bindgen-futures = "0.4.30"
